# sdk-adlib-exporter

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  write_pids.py
adlib/: __init__.py  provider.py  wrapper.py
axiell_collections/: __init__.py  provider.py  wrapper.py
builder/: adlib_to_avefi_mappings.py  base_builder.py  item_builder.py  manifestation_builder.py  work_builder.py
builder/base/: base_builder.py  utils.py
builder/item/: item_builder.py
mappings/: __init__.py  agent_type_enum.py  cinematography_activity_type_enum.py  colour_type_enum.py  colour_type_enum_mapping.py  directing_activity_type_enum.py  editing_activity_type_enum.py  format_digital_file_type_enum.py  format_film_type_enum.py  format_optical_type_enum.py  format_video_type_enum.py  frame_rate_enum.py  item_access_status_enum.py  item_element_type_enum.py  item_element_type_enum_mapping.py  language_code_enum.py  language_code_enum_mapping.py  language_usage_enum.py  language_usage_enum_mapping.py  loader.py  mappings.toml  music_activity_type_enum.py  precision_enum.py  precision_enum_mapping.py  producing_activity_type_enum.py  production_design_activity_type_enum.py  publication_event_type_enum.py  publication_event_type_enum_mapping.py  sound_type_enum.py  sound_type_enum_mapping.py  title_type_enum.py  title_type_enum_mapping.py  unit_enum.py  unit_enum_mapping.py  work_form_enum.py  work_form_enum_mapping.py  work_variant_type_enum.py  work_variant_type_enum_mapping.py  writing_activity_type_enum.py
records/: loader.py  record.py  record_definitions.toml  utils.py
(+95 files in other folders)
