[tool.poetry]
name = "av-efi-generator"
version = "0.1.0"
description = ""
authors = ["fjlein <fjlein@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
dicttoxml = "^1.7.16"
lxml = "^5.2.2"
requests = "^2.32.3"
linkml-runtime = "^1.8.0"
avefi-schema = {git = "https://github.com/AV-EFI/av-efi-schema.git", rev = "f44dadbc2cfeda23fc0bb613250350e68c794584"}
requests-cache = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

